<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.christofreichardt</groupId>
    <artifactId>tracelogger</artifactId>
    <version>1.10.1</version>
    <packaging>jar</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <description>
        A trace tool which produces clearly arranged logs by indenting the trace messages depending on the depth of the
        call stack.
    </description>
    <url>http://chr78rm.github.io/tracelogger/index.html</url>
    <inceptionYear>2014</inceptionYear>
    <licenses>
        <license>
            <name>Apache License Version 2.0, January 2004</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>
    <developers>
        <developer>
            <name>Christof Reichardt</name>
            <email>projektstudien@christofreichardt.de</email>
            <organizationUrl>http://www.christofreichardt.de/index.html</organizationUrl>
        </developer>
    </developers>
    <scm>
        <url>https://github.com/chr78rm/tracelogger</url>
    </scm>

    <distributionManagement>
        <snapshotRepository>
            <id>ossrh</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <argLine>-Duser.language=en</argLine>
        <log4j2.version>2.25.3</log4j2.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <includes>
                        <include>**/TracerFactoryUnit5.java</include>
                        <include>**/FileTracerUnit5.java</include>
                        <include>**/NetTracerUnit5.java</include>
                        <include>**/JDKLoggerUnit5.java</include>
                        <include>**/LoadUnit5.java</include>
                        <include>**/QueueFileTracerUnit5.java</include>
                        <include>**/ExampleUnit5.java</include>
                        <include>**/LogbackRouterUnit5.java</include>
                        <include>**/Log4j2RouterUnit5.java</include>
                        <include>**/PerformanceUnit5.java</include>
                        <include>**/PropertyExpressionUnit5.java</include>
                        <include>**/LockUnit5.java</include>
                    </includes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <release>17</release>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.apache.logging.log4j</groupId>
                            <artifactId>log4j-core</artifactId>
                            <version>${log4j2.version}</version>
                        </path>
                    </annotationProcessorPaths>
                    <annotationProcessors>
                        <processor>org.apache.logging.log4j.core.config.plugins.processor.PluginProcessor</processor>
                        <processor>org.apache.logging.log4j.core.config.plugins.processor.GraalVmProcessor</processor>
                    </annotationProcessors>
                    <compilerArgs>
                        <arg>-Xlint:all,-serial,-classfile,-processing</arg>
                        <arg>-J-Duser.language=en_EN</arg>
                        <arg>-proc:full</arg> <!-- needed for Log4js XmlConfigurationFactory -->
                        <arg>-Alog4j.graalvm.groupId=${project.groupId}</arg>
                        <arg>-Alog4j.graalvm.artifactId=${project.artifactId}</arg>
                    </compilerArgs>

                    <!--
                    needed for passing through the -J options
                    <fork>
                        true
                    </fork>
                    -->

                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.9.0</version>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>build-helper-maven-plugin</artifactId>
                        <version>3.6.1</version>
                        <executions>
                            <execution>
                                <id>timestamp-property</id>
                                <phase>initialize</phase>
                                <goals>
                                    <goal>timestamp-property</goal>
                                </goals>
                                <configuration>
                                    <name>build.time</name>
                                    <pattern>yyyyMMddHHmmssSSS</pattern>
                                    <locale>de_DE</locale>
                                    <timeZone>GMT</timeZone>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.12.0</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                            </execution>
                        </executions>
                        <configuration>
                            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                            <header>tracelogger ${project.version} API</header>
                            <!--suppress UnresolvedMavenProperty -->
                            <bottom>
                                Copyright &#x00A9; 2014, 2026, Christof Reichardt - Paul-Ehrlich-Weg 1 - D-63110 Rodgau - Build ${build.time}
                            </bottom>
                            <additionalJOptions>
                                <additionalJOption>-J-Duser.language=en</additionalJOption>
                            </additionalJOptions>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-source-plugin</artifactId>
                        <version>3.4.0</version>
                        <executions>
                            <execution>
                                <id>attach-sources</id>
                                <goals>
                                    <goal>jar-no-fork</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-gpg-plugin</artifactId>
                        <version>3.2.8</version>
                        <executions>
                            <execution>
                                <id>sign-artifacts</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                    <plugin>
                        <groupId>org.sonatype.central</groupId>
                        <artifactId>central-publishing-maven-plugin</artifactId>
                        <version>0.9.0</version>
                        <extensions>true</extensions>
                        <configuration>
                            <publishingServerId>central</publishingServerId>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>6.0.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>6.0.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.27.6</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-generator-annprocess</artifactId>
            <version>1.37</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.openjdk.jmh</groupId>
            <artifactId>jmh-core</artifactId>
            <version>1.37</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.23</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

</project>
